# You-are-the-nichekingdesuwa-

./: .env.example  .gitignore  PROJECT_CONTEXT.md  README.md  pyproject.toml  requirements.txt  你才是真正的小众king-项目蓝图.md  启动.bat
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml.example
src/yinyue/: __init__.py
src/yinyue/agents/: base.py  interviewer.py  orchestrator.py  pdf_agent.py  reviewer.py  tools.py
src/yinyue/api/: browser_login.py  client.py  models.py  pycloudmusic_adapter.py
src/yinyue/db/: database.py  schema.sql
src/yinyue/llm/: base.py  deepseek_client.py
src/yinyue/prompts/: interviewer.py  orchestrator.py  reviewer.py
src/yinyue/scoring/: artist_indie.py  engine.py  genre_rarity.py  play_count.py  playlist_penetration.py
src/yinyue/scraper/: pipeline.py  rate_limiter.py
src/yinyue/ui/: app.py
